package com.bridge.interfaces;

/**
 * 09/set/2022
 * @author andre
 */
public interface Product {
    public String productName();
    public void produce();
}
